--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <button id="hireBtn">Hire Me</button>
                         <button id="projectBtn">View Project</button>
                         <button id="resumeBtn"
-                            onclick="window.open('file:///C:/Users/hp/Desktop/kk/Porfolio/Assets/resume.html', '_blank')">View
+                            onclick="window.open('Assets/resume.html', '_blank')">View
                             My Resume</button>
                     </div>
 
@@ -263,5 +263,6 @@
     </div>
     <script src="Assets/js/script.js"></script>
 </body>
+
 
 </html>
