--- a/Assets/resume.html
+++ b/Assets/resume.html
@@ -256,7 +256,7 @@
                 </div>
             </div>
             <div class="back-to-portfolio">
-                <a href="file:///C:/Users/hp/Desktop/kk/Porfolio/index.html" class="back-btn">
+                <a href="portfolio-krishankant.netlify" class="back-btn">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"/>
                     </svg>
@@ -294,3 +294,4 @@
     </script>
 </body>
 </html>
+
